updated and removed unecessary things for now

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
           <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
           <li><a class="nav-link scrollto" href="#about">About</a></li>
           <li><a class="nav-link scrollto" href="#services">Services</a></li>
-          <li><a class="nav-link scrollto " href="#portfolio">Portfolio</a></li>
+          <!-- <li><a class="nav-link scrollto " href="#portfolio">Portfolio</a></li> -->
           <!-- <li><a class="nav-link scrollto" href="#pricing">Pricing</a></li> -->
           <li><a class="nav-link scrollto" href="#team">Team</a></li>
           <!-- <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
@@ -90,7 +90,7 @@
       <div class="carousel-item active">
         <div class="carousel-container">
           <h2 class="animate__animated animate__fadeInDown">Welcome to <span>Convolve AI</span></h2>
-          <p class="animate__animated fanimate__adeInUp">Bringing robotics and AI to life.</p>
+          <p class="animate__animated fanimate__adeInUp">Building robust software powered by AI.</p>
           <a href="#about" class="btn-get-started animate__animated animate__fadeInUp scrollto">Read More</a>
         </div>
       </div>
@@ -98,8 +98,8 @@
       <!-- Slide 2 -->
       <div class="carousel-item">
         <div class="carousel-container">
-          <h2 class="animate__animated animate__fadeInDown">Building Intelligent Robotic Systems</h2>
-          <p class="animate__animated animate__fadeInUp">We employ state of the art technology to develop solutions for robotics and automation.</p>
+          <h2 class="animate__animated animate__fadeInDown">Developing Intelligent Software Systems</h2>
+          <p class="animate__animated animate__fadeInUp">We employ state of the art technology to develop software and automation solutions.</p>
           <a href="#about" class="btn-get-started animate__animated animate__fadeInUp scrollto">Read More</a>
         </div>
       </div>
@@ -154,17 +154,19 @@
         <div class="row content" data-aos="fade-up">
           <div class="col-lg-6">
             <p>
-              We are a team of engineers, computer scientists, and roboticists solving challenging problems in robotics and AI. 
+              We are a team of engineers, computer scientists, and AI experts solving challenging industrial problems with software and AI. 
             </p>
             <ul>
-              <li><i class="ri-check-double-line"></i> Providing novel computer vision solutions</li>
-              <li><i class="ri-check-double-line"></i> Employ cutting edge research and technologies to serve our customers</li>
-              <li><i class="ri-check-double-line"></i> Serving customers in the autonomous driving and robotics industry</li>
+              <li><i class="ri-check-double-line"></i> Developing novel and robust software solutions</li>
+              <li><i class="ri-check-double-line"></i> Employ cutting edge research and development to serve our customers</li>
+              <li><i class="ri-check-double-line"></i> Provide state of the art data analytics, computer vision, and robotics consulting</li>
             </ul>
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0">
             <p>
-              Robotics and computer vision has gained a lot of popularity and utility over the past few years given the sudden rise in compute power due to GPU computing. Fueled by power of GPU compute and neural networks, computer vision systems are becoming more and more robust. We help in building such systems. 
+              We pride ourselves in understanding the requirements of our customers and providing the best solution. Our expertise lies in 
+              machine learning and artificial intelligence for data science, computer vision, and robotics. With advent of deep learning and GPU computing,
+              AI based solutions have gained traction.
             </p>
             <!-- <a href="#" class="btn-learn-more">Learn More</a> -->
           </div>
@@ -336,39 +338,39 @@
         <div class="row">
           <div class="col-lg-4 col-md-6">
             <div class="icon-box" data-aos="zoom-in-left">
-              <div class="icon"><i class="bi bi-briefcase" style="color: #ff689b;"></i></div>
-              <h4 class="title">Robotics</a></h4>
-              <p class="description">Extensive experience in working on robots. Building robotic systems using cutting edge tech.</p>
+              <div class="icon"><i class="bi bi-code-square" style="color: #68aeff;"></i></div>
+              <h4 class="title">Software Development</a></h4>
+              <p class="description">Extensive experience in working on software products. Building software systems using cutting edge tech.</p>
             </div>
           </div>
           <div class="col-lg-4 col-md-6 mt-5 mt-md-0">
             <div class="icon-box" data-aos="zoom-in-left" data-aos-delay="100">
               <div class="icon"><i class="bi bi-book" style="color: #e9bf06;"></i></div>
               <h4 class="title">Artificial Intelligence</a></h4>
-              <p class="description">Using state of the art AI algorithms to solve real world problems in robotics, computer vision, language modelling, etc.</p>
+              <p class="description">Using state of the art AI algorithms to solve real world problems in data science, computer vision, language modelling, robotics, etc.</p>
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 mt-5 mt-lg-0 ">
+          <!-- <div class="col-lg-4 col-md-6 mt-5 mt-lg-0 ">
             <div class="icon-box" data-aos="zoom-in-left" data-aos-delay="200">
               <div class="icon"><i class="bi bi-card-checklist" style="color: #3fcdc7;"></i></div>
               <h4 class="title">Computer Vison</a></h4>
               <p class="description">Build efficient computer vision pipelines using latest research in the field</p>
             </div>
-          </div>
-          <!-- <div class="col-lg-4 col-md-6 mt-5">
+          </div> -->
+           <div class="col-lg-4 col-md-6 mt-5 mt-lg-0">
             <div class="icon-box" data-aos="zoom-in-left" data-aos-delay="300">
               <div class="icon"><i class="bi bi-binoculars" style="color:#41cf2e;"></i></div>
-              <h4 class="title"><a href="">Magni Dolores</a></h4>
-              <p class="description">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+              <h4 class="title"><a href="">Data Science</a></h4>
+              <p class="description">Helping our customers make sense of their data and using the data to drive intelligent business decisions.</p>
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 mt-5">
+         <!--<div class="col-lg-4 col-md-6 mt-5">
             <div class="icon-box" data-aos="zoom-in-left" data-aos-delay="400">
               <div class="icon"><i class="bi bi-globe" style="color: #d6ff22;"></i></div>
-              <h4 class="title"><a href="">Nemo Enim</a></h4>
-              <p class="description">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque</p>
+              <h4 class="title"><a href="">Robotics</a></h4>
+              <p class="description">We have background in state of the art robotics systems. </p>
             </div>
           </div>
           <div class="col-lg-4 col-md-6 mt-5">
@@ -384,7 +386,7 @@
     </section><!-- End Services Section -->
 
     <!-- ======= Portfolio Section ======= -->
-    <section id="portfolio" class="portfolio">
+    <!--<section id="portfolio" class="portfolio">
       <div class="container">
 
         <div class="section-title" data-aos="zoom-out">
@@ -451,7 +453,7 @@
             </div>
           </div>
 
-         <!--  <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-img"><img src="assets/img/portfolio/portfolio-6.jpg" class="img-fluid" alt=""></div>
             <div class="portfolio-info">
               <h4>App 3</h4>
@@ -489,15 +491,15 @@
               <a href="assets/img/portfolio/portfolio-9.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Web 3"><i class="bx bx-plus"></i></a>
               <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
             </div>
-          </div> -->
+          </div> 
 
         </div>
 
       </div>
-    </section><!-- End Portfolio Section -->
+    </section> --><!-- End Portfolio Section -->
 
     <!-- ======= Testimonials Section ======= -->
-    <section id="testimonials" class="testimonials">
+    <!-- <section id="testimonials" class="testimonials">
       <div class="container">
 
         <div class="section-title" data-aos="zoom-out">
@@ -519,7 +521,7 @@
                 <h3>Saul Goodman</h3>
                 <h4>Ceo &amp; Founder</h4>
               </div>
-            </div><!-- End testimonial item -->
+            </div>
 
             <div class="swiper-slide">
               <div class="testimonial-item">
@@ -532,7 +534,7 @@
                 <h3>Sara Wilsson</h3>
                 <h4>Designer</h4>
               </div>
-            </div><!-- End testimonial item -->
+            </div>
 
             <div class="swiper-slide">
               <div class="testimonial-item">
@@ -545,7 +547,7 @@
                 <h3>Jena Karlis</h3>
                 <h4>Store Owner</h4>
               </div>
-            </div><!-- End testimonial item -->
+            </div>
 
             <div class="swiper-slide">
               <div class="testimonial-item">
@@ -558,7 +560,7 @@
                 <h3>Matt Brandon</h3>
                 <h4>Freelancer</h4>
               </div>
-            </div><!-- End testimonial item -->
+            </div>
 
             <div class="swiper-slide">
               <div class="testimonial-item">
@@ -571,14 +573,15 @@
                 <h3>John Larson</h3>
                 <h4>Entrepreneur</h4>
               </div>
-            </div><!-- End testimonial item -->
+            </div>
 
           </div>
           <div class="swiper-pagination"></div>
         </div>
 
       </div>
-    </section><!-- End Testimonials Section -->
+    </section> -->
+    <!-- End Testimonials Section -->
 
     <!-- ======= Pricing Section ======= -->
     <!-- <section id="pricing" class="pricing">
@@ -751,10 +754,10 @@
               <div class="member-img">
                 <img src="assets/img/team/dhruv-sharma.jpeg" class="img-fluid" alt="">
                 <div class="social">
-                  <a href=""><i class="bi bi-twitter"></i></a>
+                  <!-- <a href=""><i class="bi bi-twitter"></i></a>
                   <a href=""><i class="bi bi-facebook"></i></a>
-                  <a href=""><i class="bi bi-instagram"></i></a>
-                  <a href=""><i class="bi bi-linkedin"></i></a>
+                  <a href=""><i class="bi bi-instagram"></i></a> -->
+                  <a href="https://www.linkedin.com/in/dhruvsharmauw/" target="_blank"><i class="bi bi-linkedin"></i></a>
                 </div>
               </div>
               <div class="member-info">
@@ -787,10 +790,10 @@
               <div class="member-img">
                 <img src="assets/img/team/sugandha-sharma.jpeg" class="img-fluid" alt="">
                 <div class="social">
-                  <a href=""><i class="bi bi-twitter"></i></a>
+                  <!-- <a href=""><i class="bi bi-twitter"></i></a>
                   <a href=""><i class="bi bi-facebook"></i></a>
-                  <a href=""><i class="bi bi-instagram"></i></a>
-                  <a href=""><i class="bi bi-linkedin"></i></a>
+                  <a href=""><i class="bi bi-instagram"></i></a> -->
+                  <a href="https://www.linkedin.com/in/sugandhasharma17" target="_blank"><i class="bi bi-linkedin"></i></a>
                 </div>
               </div>
               <div class="member-info">
@@ -845,20 +848,20 @@
               <div class="email">
                 <i class="bi bi-envelope"></i>
                 <h4>Email:</h4>
-                <p>info@convolve.ai</p>
+                <p>convolveai@gmail.com</p>
               </div>
 
               <div class="phone">
                 <i class="bi bi-phone"></i>
                 <h4>Call:</h4>
-                <p>+1 5589 55488 55s</p>
+                <p>+1 226-606-0988</p>
               </div>
 
             </div>
 
           </div>
 
-          <div class="col-lg-8 mt-5 mt-lg-0" data-aos="fade-left">
+          <!-- <div class="col-lg-8 mt-5 mt-lg-0" data-aos="fade-left">
 
             <form action="forms/contact.php" method="post" role="form" class="php-email-form">
               <div class="row">
@@ -883,7 +886,7 @@
               <div class="text-center"><button type="submit">Send Message</button></div>
             </form>
 
-          </div>
+          </div> -->
 
         </div>
 
@@ -895,17 +898,17 @@
   <!-- ======= Footer ======= -->
   <footer id="footer">
     <div class="container">
-      <h3>Selecao</h3>
-      <p>Et aut eum quis fuga eos sunt ipsa nihil. Labore corporis magni eligendi fuga maxime saepe commodi placeat.</p>
-      <div class="social-links">
+      <h3>Convolve</h3>
+      <p>Get in touch with us today. We would love to talk to you.</p>
+      <!-- <div class="social-links">
         <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
         <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
         <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
         <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
         <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
-      </div>
+      </div> -->
       <div class="copyright">
-        &copy; Copyright <strong><span>Selecao</span></strong>. All Rights Reserved
+        &copy; Copyright <strong><span>Convolve</span></strong>. All Rights Reserved
       </div>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
