--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           <li><a class="nav-link scrollto" href="#services">Services</a></li>
           <!-- <li><a class="nav-link scrollto " href="#portfolio">Portfolio</a></li> -->
           <!-- <li><a class="nav-link scrollto" href="#pricing">Pricing</a></li> -->
-          <li><a class="nav-link scrollto" href="#team">Team</a></li>
+          <!-- <li><a class="nav-link scrollto" href="#team">Team</a></li> -->
           <!-- <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a href="#">Drop Down 1</a></li>
@@ -739,7 +739,7 @@
     </section> --><!-- End F.A.Q Section -->
 
     <!-- ======= Team Section ======= -->
-    <section id="team" class="team">
+    <!-- <section id="team" class="team">
       <div class="container">
 
         <div class="section-title" data-aos="zoom-out">
@@ -754,9 +754,9 @@
               <div class="member-img">
                 <img src="assets/img/team/dhruv-sharma.jpeg" class="img-fluid" alt="">
                 <div class="social">
-                  <!-- <a href=""><i class="bi bi-twitter"></i></a>
+                  <a href=""><i class="bi bi-twitter"></i></a>
                   <a href=""><i class="bi bi-facebook"></i></a>
-                  <a href=""><i class="bi bi-instagram"></i></a> -->
+                  <a href=""><i class="bi bi-instagram"></i></a>
                   <a href="https://www.linkedin.com/in/dhruvsharmauw/" target="_blank"><i class="bi bi-linkedin"></i></a>
                 </div>
               </div>
@@ -765,7 +765,7 @@
                 <span>Chief Executive Officer</span>
               </div>
             </div>
-          </div>
+          </div> -->
 <!-- 
           <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
             <div class="member" data-aos="fade-up" data-aos-delay="100">
@@ -785,14 +785,14 @@
             </div>
           </div> -->
 
-          <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
+          <!-- <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
             <div class="member" data-aos="fade-up" data-aos-delay="200">
               <div class="member-img">
                 <img src="assets/img/team/sugandha-sharma.jpeg" class="img-fluid" alt="">
                 <div class="social">
-                  <!-- <a href=""><i class="bi bi-twitter"></i></a>
+                  <a href=""><i class="bi bi-twitter"></i></a>
                   <a href=""><i class="bi bi-facebook"></i></a>
-                  <a href=""><i class="bi bi-instagram"></i></a> -->
+                  <a href=""><i class="bi bi-instagram"></i></a>
                   <a href="https://www.linkedin.com/in/sugandhasharma17" target="_blank"><i class="bi bi-linkedin"></i></a>
                 </div>
               </div>
@@ -801,7 +801,7 @@
                 <span>CTO</span>
               </div>
             </div>
-          </div>
+          </div> -->
 
       <!--     <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
             <div class="member" data-aos="fade-up" data-aos-delay="300">
@@ -821,10 +821,10 @@
             </div>
           </div> -->
 
-        </div>
+       <!--  </div>
 
       </div>
-    </section><!-- End Team Section -->
+    </section> --><!-- End Team Section -->
 
     <!-- ======= Contact Section ======= -->
     <section id="contact" class="contact">
@@ -848,7 +848,7 @@
               <div class="email">
                 <i class="bi bi-envelope"></i>
                 <h4>Email:</h4>
-                <p>convolveai@gmail.com</p>
+                <p>info@convolve.ai</p>
               </div>
 
               <div class="phone">
