--- a/index.html
+++ b/index.html
@@ -739,7 +739,7 @@
     </section> --><!-- End F.A.Q Section -->
 
     <!-- ======= Team Section ======= -->
-    <!-- <section id="team" class="team">
+    <section id="team" class="team">
       <div class="container">
 
         <div class="section-title" data-aos="zoom-out">
@@ -754,9 +754,9 @@
               <div class="member-img">
                 <img src="assets/img/team/dhruv-sharma.jpeg" class="img-fluid" alt="">
                 <div class="social">
-                  <a href=""><i class="bi bi-twitter"></i></a>
+                  <!-- <a href=""><i class="bi bi-twitter"></i></a>
                   <a href=""><i class="bi bi-facebook"></i></a>
-                  <a href=""><i class="bi bi-instagram"></i></a>
+                  <a href=""><i class="bi bi-instagram"></i></a> -->
                   <a href="https://www.linkedin.com/in/dhruvsharmauw/" target="_blank"><i class="bi bi-linkedin"></i></a>
                 </div>
               </div>
@@ -765,7 +765,7 @@
                 <span>Chief Executive Officer</span>
               </div>
             </div>
-          </div> -->
+          </div>
 <!-- 
           <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
             <div class="member" data-aos="fade-up" data-aos-delay="100">
@@ -785,14 +785,14 @@
             </div>
           </div> -->
 
-          <!-- <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
+          <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
             <div class="member" data-aos="fade-up" data-aos-delay="200">
               <div class="member-img">
                 <img src="assets/img/team/sugandha-sharma.jpeg" class="img-fluid" alt="">
                 <div class="social">
-                  <a href=""><i class="bi bi-twitter"></i></a>
+                  <!-- <a href=""><i class="bi bi-twitter"></i></a>
                   <a href=""><i class="bi bi-facebook"></i></a>
-                  <a href=""><i class="bi bi-instagram"></i></a>
+                  <a href=""><i class="bi bi-instagram"></i></a> -->
                   <a href="https://www.linkedin.com/in/sugandhasharma17" target="_blank"><i class="bi bi-linkedin"></i></a>
                 </div>
               </div>
@@ -801,7 +801,7 @@
                 <span>CTO</span>
               </div>
             </div>
-          </div> -->
+          </div>
 
       <!--     <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
             <div class="member" data-aos="fade-up" data-aos-delay="300">
@@ -900,13 +900,13 @@
     <div class="container">
       <h3>Convolve</h3>
       <p>Get in touch with us today. We would love to talk to you.</p>
-      <!-- <div class="social-links">
-        <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-        <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-        <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-        <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-        <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
-      </div> -->
+      <div class="social-links">
+        <a href="https://twitter.com/AiConvolve" target="_blank" class="twitter"><i class="bx bxl-twitter"></i></a>
+        <a href="https://www.facebook.com/people/Convolve-AI/100090391818907/" target="_blank" class="facebook"><i class="bx bxl-facebook"></i></a>
+        <!-- <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a> -->
+        <!-- <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a> -->
+        <a href="https://www.linkedin.com/company/convolveai" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+      </div>
       <div class="copyright">
         &copy; Copyright <strong><span>Convolve</span></strong>. All Rights Reserved
       </div>
