removed team section. rework

--- a/index.html
+++ b/index.html
@@ -739,7 +739,7 @@
     </section> --><!-- End F.A.Q Section -->
 
     <!-- ======= Team Section ======= -->
-    <section id="team" class="team">
+    <!-- <section id="team" class="team">
       <div class="container">
 
         <div class="section-title" data-aos="zoom-out">
@@ -754,9 +754,9 @@
               <div class="member-img">
                 <img src="assets/img/team/dhruv-sharma.jpeg" class="img-fluid" alt="">
                 <div class="social">
-                  <!-- <a href=""><i class="bi bi-twitter"></i></a>
+                  <a href=""><i class="bi bi-twitter"></i></a>
                   <a href=""><i class="bi bi-facebook"></i></a>
-                  <a href=""><i class="bi bi-instagram"></i></a> -->
+                  <a href=""><i class="bi bi-instagram"></i></a>
                   <a href="https://www.linkedin.com/in/dhruvsharmauw/" target="_blank"><i class="bi bi-linkedin"></i></a>
                 </div>
               </div>
@@ -765,7 +765,7 @@
                 <span>Chief Executive Officer</span>
               </div>
             </div>
-          </div>
+          </div> -->
 <!-- 
           <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
             <div class="member" data-aos="fade-up" data-aos-delay="100">
@@ -785,15 +785,15 @@
             </div>
           </div> -->
 
-          <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
+         <!--  <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
             <div class="member" data-aos="fade-up" data-aos-delay="200">
               <div class="member-img">
                 <img src="assets/img/team/sugandha-sharma.jpeg" class="img-fluid" alt="">
-                <div class="social">
+                <div class="social"> -->
                   <!-- <a href=""><i class="bi bi-twitter"></i></a>
                   <a href=""><i class="bi bi-facebook"></i></a>
                   <a href=""><i class="bi bi-instagram"></i></a> -->
-                  <a href="https://www.linkedin.com/in/sugandhasharma17" target="_blank"><i class="bi bi-linkedin"></i></a>
+               <!--    <a href="https://www.linkedin.com/in/sugandhasharma17" target="_blank"><i class="bi bi-linkedin"></i></a>
                 </div>
               </div>
               <div class="member-info">
@@ -801,7 +801,7 @@
                 <span>CTO</span>
               </div>
             </div>
-          </div>
+          </div> -->
 
       <!--     <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
             <div class="member" data-aos="fade-up" data-aos-delay="300">
