--- a/index.html
+++ b/index.html
@@ -842,7 +842,7 @@
               <div class="address">
                 <i class="bi bi-geo-alt"></i>
                 <h4>Location:</h4>
-                <p>Kitchener, ON</p>
+                <p>73 Water Street N, #300, Cambridge, ON</p>
               </div>
 
               <div class="email">
