--- a/index.html
+++ b/index.html
@@ -861,9 +861,10 @@
 
           </div>
 
-          <!-- <div class="col-lg-8 mt-5 mt-lg-0" data-aos="fade-left">
+          <div class="col-lg-8 mt-5 mt-lg-0" data-aos="fade-left">
+            <iframe aria-label='Contact Us' frameborder="0" style="height:505px;width:100%;border:none;" src='https://forms.zohopublic.com/convolveai/form/ContactUs/formperma/Gxn56NCf74jV78hiNlZwk-MeJ_9rP0r9KBYh7HYoAfg'></iframe>
 
-            <form action="forms/contact.php" method="post" role="form" class="php-email-form">
+            <!--<form action="forms/contact.php" method="post" role="form" class="php-email-form">
               <div class="row">
                 <div class="col-md-6 form-group">
                   <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required>
@@ -884,9 +885,9 @@
                 <div class="sent-message">Your message has been sent. Thank you!</div>
               </div>
               <div class="text-center"><button type="submit">Send Message</button></div>
-            </form>
+            </form>-->
 
-          </div> -->
+          </div>
 
         </div>
 
